# RISCV-Emulator

./: .gitignore  CMakeLists.txt
src/: main.c  test.h
src/core/: csr.c  csr.h  instr.h  instr_implements.h  riscv.c  riscv.h  types.h
src/device/: device.c  device.h  mem.c  mem.h
src/gdb/: gdb_server.c  gdb_server.h
src/plat/: plat.h
src/test/: instr_test.h
